--- a/public/scss/components/_services.scss
+++ b/public/scss/components/_services.scss
@@ -7,6 +7,11 @@
     background-color: $container-white;
     width: 80%;
     padding: 5rem;
+    @include respond(tab-land){
+      overflow-x: hidden;
+      overflow-y: auto;
+      height: 55rem;
+    }
   }
 
   &__heading-box{
